<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hvstudy.myapplication.SettingsActivity"
    tools:showIn="@layout/activity_settings"
    android:orientation="vertical">

    <TextView
        android:text="@string/typeface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="15sp"
        android:layout_marginTop="8dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnFont"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="@string/size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="15sp"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnSize"
        android:layout_marginLeft="8dp" />

    <TextView
        android:text="@string/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="15sp"
        android:layout_marginTop="20dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spnStyle"
        android:layout_marginLeft="8dp" />

    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:background="@drawable/greenbutton"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:id="@+id/btnSave" />


</LinearLayout>
